2004-06-26    <bilboed@localhost>

	* src/pitivi-project.c (pitivi_project_new_from_file): New function to create a PitiviProject from a file

	* src/pitivi-toolboxwindow.c (pitivi_callb_toolbox_fileopen_project): Added File chooser for opening a file

	* src/pitivi-settingswindow.c: 
	* src/pitivi-settingswindow.h: Created PitiviSettingsWindow, a PitiviWindows

	* src/pitivi-projectsettingswindow.c: 
	* src/pitivi-projectsettingswindow.h: Created PitiviProjectSettingsWindow, a PitiviProjectWindows
	

2004-06-26    <bilboed@rider.bilboed.homelinux.org>

	* src/pitivi-timelinewindow.c (pitivi_timelinewindow_get_type):
	* src/pitivi-sourcelistwindow.c (pitivi_sourcelistwindow_get_type): set the father class to PITIVI_PROJECTWINDOWS_TYPE
		
	* src/pitivi-viewercontroller.c: 
	* src/pitivi-viewercontroller.h: Converted PitiviViewerController to derivate of PitiviWindows

	* src/pitivi-viewerwindow.c:
	* src/pitivi-viewerwindow.h: Converted PitiviViewerWindow to derivate of PitiviWindows

	* src/pitivi-sourcelistwindow.c: 
	* src/pitivi-sourcelistwindow.h: Converted PitiviSourceListWindow to derivate of PitiviProjectWindows

	* src/pitivi-timelinewindow.c: 
	* src/pitivi-timelinewindow.h: Converted PitiviTimelineWindow to derivate of PitiviProjectWindows

2004-06-25    <bilboed@localhost>

	* src/pitivi-effectswindow.c (pitivi_effectswindow_new): modified to take PitiviMainApp as parameter

	* src/pitivi-mainapp.h (struct _PitiviMainApp): moved the windows to PitiviMainAppPrivate

	* src/pitivi-effectswindow.c: 
	* src/pitivi-effectswindow.h: Converted PitiviEffectsWindow to derivate of PitiviWindows

	* src/pitivi-toolboxwindow.c: 
	* src/pitivi-toolboxwindow.h: 
	* src/pitivi-newprojectwindow.c: 
	* src/pitivi-newprojectwindow.h: 
	* src/pitivi-windows.c:
	* src/pitivi-windows.h:
	* src/pitivi-projectwindows.c:
	* src/pitivi-projectwindows.h: Added PitiviWindows and PitiviProjectWindows classes