@@ -55,6 +55,7 @@ struct _PitiviProject
   /* instance public members */
   PitiviProjectSettings		*settings;
   PitiviProjectSourceList	*sources;
+  gchar				*filename;
 
   /* private */
   PitiviProjectPrivate *private;
@@ -75,5 +76,9 @@ GType pitivi_project_get_type (void);
 
 PitiviProject *pitivi_project_new (PitiviProjectSettings *settings);
 PitiviProject *pitivi_project_new_from_file (const gchar *filename);
+gboolean pitivi_project_save_to_file(PitiviProject *project, const gchar *filename);
+void pitivi_project_restore_thyself(PitiviProject *project, xmlNodePtr self);
+xmlDocPtr pitivi_project_save_thyself(PitiviProject *project);
+
 
 #endif
