@@ -28,5 +28,8 @@
 
 #include <glib-object.h>
 #include <glib.h>
+#include <libxml/parser.h>
+#include <libxml/tree.h>
+
 
 #endif
